AmpShare SF Codebase/force-app/main/default/objects/availability_AmpShare_Heroku__dll/fields/Charger_reference__c.field-meta.xml
<CustomField>
    <fullName>Charger_reference__c</fullName>
    <label>Charger_reference</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>Charger_reference</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>