AmpShare SF Codebase/force-app/main/default/objects/availability_AmpShare_Heroku__dll/fields/chargercity__c.field-meta.xml
<CustomField>
    <fullName>chargercity__c</fullName>
    <label>chargercity</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>chargercity</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>