AmpShare SF Codebase/force-app/main/default/objects/availability_AmpShare_Heroku__dll/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Date</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>Date</externalName>
        <isEventDate>true</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Date</type>
</CustomField>