AmpShare SF Codebase/force-app/main/default/objects/availability_AmpShare_Heroku__dll/fields/id__c.field-meta.xml
<CustomField>
    <fullName>id__c</fullName>
    <label>id</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>id</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <primaryIndexOrder>1</primaryIndexOrder>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>