AmpShare SF Codebase/force-app/main/default/objects/availability_AmpShare_Heroku__dll/fields/is_deleted__c.field-meta.xml
<CustomField>
    <fullName>is_deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is_deleted</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>is_deleted</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Checkbox</type>
</CustomField>