AmpShare SF Codebase/force-app/main/default/objects/availability_AmpShare_Heroku__dll/fields/Is_reserved__c.field-meta.xml
<CustomField>
    <fullName>Is_reserved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_reserved</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>Is_reserved</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Checkbox</type>
</CustomField>