AmpShare SF Codebase/force-app/main/default/objects/availability_AmpShare_Heroku__dll/fields/price__c.field-meta.xml
<CustomField>
    <fullName>price__c</fullName>
    <label>price</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>price</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>