AmpShare SF Codebase/force-app/main/default/objects/availability_AmpShare_Heroku__dll/fields/reservedby__c.field-meta.xml
<CustomField>
    <fullName>reservedby__c</fullName>
    <label>reservedby</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>reservedby</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>