AmpShare SF Codebase/force-app/main/default/objects/availability_AmpShare_Heroku__dll/fields/timeslots__c.field-meta.xml
<CustomField>
    <fullName>timeslots__c</fullName>
    <label>timeslots</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>timeslots</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>